--- a/react.js/index.html
+++ b/react.js/index.html
@@ -13,12 +13,37 @@
 </body>
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/babel">
   const root = document.getElementById('root');
-  const span = React.createElement('span', { id: 'counter' }, '0');
-  const btn = React.createElement('button', { onClick: () => console.log('i am clicked') }, 'click me');
-  const div = React.createElement('div', null, [btn, span]);
-  ReactDOM.render(div, root);
+
+  function App() {
+    const [minutes, setMinutes] = React.useState(0);
+
+    const onChange = (event) => {
+      setMinutes(minutes => minutes = event.target.value);
+    }
+    const resetMinutes = () => {
+      setMinutes(minutes => minutes = 0);
+    }
+
+    return (
+      <div>
+        <h1>Super converter</h1>
+        <div>
+          <label htmlFor='minutes'>minutes</label>
+          <input value={minutes} id="minutes" placeholder='Minutes' type='number' onChange={onChange} />
+        </div>
+        <div>
+          <label htmlFor='hours'>hours</label>
+          <input value={minutes / 60} id="hours" placeholder='Hours' type='number' disable/>
+        </div>
+        <button onClick={resetMinutes}>reset</button>
+      </div>
+    )
+  }
+
+  ReactDOM.render(<App />, root);
 </script>
 
 </html>
