--- a/react.js/index.html
+++ b/react.js/index.html
@@ -18,13 +18,18 @@
   const root = document.getElementById('root');
 
   function App() {
-    const [minutes, setMinutes] = React.useState(0);
+    const [amount, setAmount] = React.useState(0);
+    const [filpped, setFlipped] = React.useState(false);
 
     const onChange = (event) => {
-      setMinutes(minutes => minutes = event.target.value);
+      setAmount(amount => event.target.value);
     }
-    const resetMinutes = () => {
-      setMinutes(minutes => minutes = 0);
+    const reset = () => {
+      setAmount(amount => 0);
+    }
+
+    const onFilp = () => {
+      setFlipped(filpped => !filpped);
     }
 
     return (
@@ -32,13 +37,14 @@
         <h1>Super converter</h1>
         <div>
           <label htmlFor='minutes'>minutes</label>
-          <input value={minutes} id="minutes" placeholder='Minutes' type='number' onChange={onChange} />
+          <input value={filpped ? amount * 60 : amount} id="minutes" placeholder='Minutes' type='number' onChange={onChange} disabled={filpped} />
         </div>
         <div>
           <label htmlFor='hours'>hours</label>
-          <input value={minutes / 60} id="hours" placeholder='Hours' type='number' disable/>
+          <input value={filpped ? amount : amount / 60} id="hours" placeholder='Hours' type='number' onChange={onChange} disabled={!filpped} />
         </div>
-        <button onClick={resetMinutes}>reset</button>
+        <button onClick={reset}>reset</button>
+        <button onClick={onFilp}>flip</button>
       </div>
     )
   }
