--- a/react.js/index.html
+++ b/react.js/index.html
@@ -16,8 +16,7 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
   const root = document.getElementById('root');
-
-  function App() {
+  function MinutesToHours() {
     const [amount, setAmount] = React.useState(0);
     const [filpped, setFlipped] = React.useState(false);
 
@@ -35,7 +34,6 @@
 
     return (
       <div>
-        <h1>Super converter</h1>
         <div>
           <label htmlFor='minutes'>minutes</label>
           <input value={filpped ? amount * 60 : amount} id="minutes" placeholder='Minutes' type='number' onChange={onChange} disabled={filpped} />
@@ -46,6 +44,31 @@
         </div>
         <button onClick={reset}>reset</button>
         <button onClick={onFilp}>flip</button>
+      </div>
+    )
+  }
+
+  function KmToMiles() {
+    return (
+      <h3>km To mile</h3>
+    )
+  }
+
+  function App() {
+    const [index, setIndex] = React.useState('0');
+    const onSelect = (e) => {
+      setIndex(index => e.target.value);
+    }
+
+    return (
+      <div>
+        <h1>Super converter</h1>
+        <select value={index} onChange={onSelect}>
+          <option value="0">Minutes & Hours</option>
+          <option value="1">km & Miles</option>
+        </select>
+        {index === '0' ? <MinutesToHours /> : null}
+        {index === '1' ? <KmToMiles /> : null}
       </div>
     )
   }
