--- a/react.js/index.html
+++ b/react.js/index.html
@@ -16,60 +16,24 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
   const root = document.getElementById('root');
-  function MinutesToHours() {
-    const [amount, setAmount] = React.useState(0);
-    const [filpped, setFlipped] = React.useState(false);
 
-    const onChange = (event) => {
-      setAmount(amount => event.target.value);
-    }
-    const reset = () => {
-      setAmount(amount => 0);
-    }
-
-    const onFilp = () => {
-      reset();
-      setFlipped(filpped => !filpped);
-    }
-
-    return (
-      <div>
-        <div>
-          <label htmlFor='minutes'>minutes</label>
-          <input value={filpped ? amount * 60 : amount} id="minutes" placeholder='Minutes' type='number' onChange={onChange} disabled={filpped} />
-        </div>
-        <div>
-          <label htmlFor='hours'>hours</label>
-          <input value={filpped ? amount : amount / 60} id="hours" placeholder='Hours' type='number' onChange={onChange} disabled={!filpped} />
-        </div>
-        <button onClick={reset}>reset</button>
-        <button onClick={onFilp}>flip</button>
-      </div>
-    )
+  function Btn({ text, changeValue }) {
+    return <button onClick={changeValue}>{text}</button>
   }
 
-  function KmToMiles() {
-    return (
-      <h3>km To mile</h3>
-    )
-  }
+  const MemorizedBtn = React.memo(Btn);
 
   function App() {
-    const [index, setIndex] = React.useState('0');
-    const onSelect = (e) => {
-      setIndex(index => e.target.value);
+    const [value, setValue] = React.useState("Save Changes");
+    const changeValue = () => {
+      setValue('Revert Changes');
     }
 
     return (
-      <div>
-        <h1>Super converter</h1>
-        <select value={index} onChange={onSelect}>
-          <option value="0">Minutes & Hours</option>
-          <option value="1">km & Miles</option>
-        </select>
-        {index === '0' ? <MinutesToHours /> : null}
-        {index === '1' ? <KmToMiles /> : null}
-      </div>
+      <>
+        <MemorizedBtn text={value} changeValue={changeValue} />
+        <MemorizedBtn text="Continue" />
+      </>
     )
   }
 
